<resources>
    <string name="app_name">AllStorj</string>

    <string name="encryption_parameters">Encryption parameters</string>
    <string name="encryption_none">None</string>
    <string name="encryption_aes">AES-GM 256</string>
    <string name="encryption_secret_box">Secret Box</string>
    <string name="redundancy_scheme">Redundancy scheme</string>
    <string name="redundancy_repair_shares">Repair shares</string>
    <string name="redundancy_required_shares">Required shares</string>
    <string name="redundancy_share_size">Share size</string>
    <string name="redundancy_success_shares">Success shares</string>
    <string name="redundancy_total_shares">Total shares</string>

    <!-- Bottom Navigation -->
    <string name="menu_buckets">Buckets</string>
    <string name="menu_settings">Settings</string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="login_hint_satellite">Satellite Address</string>
    <string name="login_sign_up">Don\'t have an account? Sign Up.</string>
    <string name="login_error_unauthorized">Invalid Credentials</string>
    <string name="login_error_unknown">Unknown Error</string>
    <string name="login_error_forbidden">Forbidden</string>
    <string name="login_logo_content_description">AllStorj Logo</string>
    <string name="login_hint_encryption">Encryption Access</string>
    <string name="login_hint_api">API Key</string>
    <string-array name="login_satellites_values">
        <item>us-central-1.tardigrade.io:7777</item>
        <item>asia-east-1.tardigrade.io:7777</item>
        <item>europe-west-1.tardigrade.io:7777</item>
    </string-array>
    <string-array name="login_satellites_names">
        <item>USA (us-central-1)</item>
        <item>Asia (asia-east-1)</item>
        <item>Europe (europe-west-1)</item>
    </string-array>

    <!-- Create Bucket -->
    <string name="create_bucket">Create Bucket</string>
    <string name="create_bucket_hint_name">Bucket name</string>
    <string name="create_bucket_advanced">Advanced options</string>
    <string name="bucket_hint_block_size">Block size</string>
    <string name="bucket_path_cipher">Path cipher</string>
    <string name="bucket_segment_size">Segment size</string>

    <!-- Bucket Info -->
    <string name="bucket_info_delete">Delete</string>
    <string name="bucket_info_encryption">Encryption: %1$s, Block Size: %2$d</string>
    <string name="bucket_info_path_cipher">Encryption: %1$s</string>
    <string name="bucket_info_redundancy">Repair Threshold: %1$d, Required Shares: %2$d, Success Shares: %3$d, Total Shares: %4$d, Share Size: %5$d</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Create File -->
    <string name="create_file">Create File</string>
    <string name="create_file_date_select">Select Date</string>
    <string name="create_file_date_delete">Clear</string>
    <string name="create_file_date_label">File Expiration Date</string>
    <string name="create_file_date_never">Never</string>
    <string name="create_file_path">File Path</string>
    <string name="create_file_hint_path">Path to prepend (ex: /folder/path/)</string>
    <string name="create_file_mime">Mime Type</string>
    <string name="create_file_hint_mime">image/png</string>

</resources>
