<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_medium"
    tools:context=".onboarding.login.LoginFragment">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/spacing_medium"
        android:contentDescription="@string/login_logo_content_description"
        android:src="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInput.Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginApiKeyInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_api"
            android:inputType="textNoSuggestions" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInput.Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/spacing_medium">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEncryptionAccessInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_encryption"
            android:inputType="textNoSuggestions" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/ErrorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/spacing_medium"
        android:visibility="gone"
        tools:text="Unknown"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginConfirm"
        style="@style/FilledButton.Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginRegister"
        style="@style/TextButton.Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_sign_up" />

</LinearLayout>
